[feature] : 상세페이지 추가

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <script
+    <!-- <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=cecdf7dbe7e6a353ea8474b6e663741f"
-    ></script>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2c4e67e0bdde4ea5eafd6ddda5d18c18"
+      <link
+      rel="icon"
+      href="%PUBLIC_URL%/favicon.ico"
+    /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
