--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_MAP_KEY%
       "
     ></script>
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
